--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,27 @@
       name="description"
       content="What is your home really worth?  Find out the price of your home in Toronto, Ontario, Canada"
     />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R4HX2FW3N7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-R4HX2FW3N7');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 410671059 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-410671059"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-410671059');
+    </script>
+
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
