--- a/public/index.html
+++ b/public/index.html
@@ -11,23 +11,23 @@
     />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R4HX2FW3N7"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-R4HX2FW3N7"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
-      gtag('config', 'G-R4HX2FW3N7');
+      gtag('config', 'G-R4HX2FW3N7'); -->
     </script>
     <!-- Global site tag (gtag.js) - Google Ads: 410671059 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-410671059"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-410671059"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
       gtag('config', 'AW-410671059');
-    </script>
+    </script> -->
 
 
     <!--
