Add gtag script

--- a/public/index.html
+++ b/public/index.html
@@ -10,24 +10,13 @@
       content="What is your home really worth?  Find out the price of your home in Toronto, Ontario, Canada"
     />
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-R4HX2FW3N7"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-R4HX2FW3N7'); -->
-    </script>
-    <!-- Global site tag (gtag.js) - Google Ads: 410671059 -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-410671059"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'AW-410671059');
-    </script> -->
+   <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MQM8K7W');</script>
+  <!-- End Google Tag Manager -->
 
 
     <!--
